// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnchorLink component renders default correctly 1`] = `
<div>
  <a
    class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-root-1 Anchorlink MuiTypography-colorPrimary"
    href="/"
  >
    <span>
      BMI Group
    </span>
  </a>
</div>
`;

exports[`AnchorLink component renders disabled correctly 1`] = `
<div>
  <a
    aria-disabled="true"
    class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-root-7 Anchorlink AnchorLink-disabled-8 MuiTypography-colorPrimary"
    href="/"
  >
    <span>
      BMI Group
    </span>
  </a>
</div>
`;

exports[`AnchorLink component renders icon disabled correctly 1`] = `
<div>
  <a
    aria-disabled="true"
    class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-root-31 Anchorlink AnchorLink-disabled-32 MuiTypography-colorPrimary"
    href="/"
  >
    <span>
      BMI Group
    </span>
    <svg
      aria-hidden="true"
      class="AnchorLink-icon-35"
      data-testid="internal"
      focusable="false"
    />
  </a>
</div>
`;

exports[`AnchorLink component renders leading icon correctly 1`] = `
<div>
  <a
    class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-root-13 Anchorlink MuiTypography-colorPrimary"
    href="/"
  >
    <svg
      aria-hidden="true"
      class="AnchorLink-icon-17"
      data-testid="internal"
      focusable="false"
    />
    <span>
      BMI Group
    </span>
  </a>
</div>
`;

exports[`AnchorLink component renders multi-line with icon correctly 1`] = `
<div>
  <a
    class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-root-37 Anchorlink MuiTypography-colorPrimary"
    href="/"
  >
    <span>
      <p
        style="width: 300px; text-align: left;"
      >
        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
      </p>
    </span>
    <svg
      aria-hidden="true"
      class="AnchorLink-icon-41"
      data-testid="internal"
      focusable="false"
    />
  </a>
</div>
`;

exports[`AnchorLink component renders only with data from context 1`] = `
<div>
  <a
    class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-root-61 Anchorlink AnchorLink-black-64 MuiTypography-colorPrimary"
    type="button"
  >
    <span>
      BMI Group
    </span>
  </a>
</div>
`;

exports[`AnchorLink component renders trailing external icon correctly 1`] = `
<div>
  <a
    class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-root-25 Anchorlink MuiTypography-colorPrimary"
    href="/"
  >
    <span>
      BMI Group
    </span>
    <svg
      aria-hidden="true"
      class="AnchorLink-icon-29"
      data-testid="external"
      focusable="false"
    />
  </a>
</div>
`;

exports[`AnchorLink component renders trailing internal icon correctly 1`] = `
<div>
  <a
    class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-root-19 Anchorlink MuiTypography-colorPrimary"
    href="/"
  >
    <span>
      BMI Group
    </span>
    <svg
      aria-hidden="true"
      class="AnchorLink-icon-23"
      data-testid="internal"
      focusable="false"
    />
  </a>
</div>
`;

exports[`AnchorLink component renders with a specified color 1`] = `
<div>
  <a
    class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-root-43 Anchorlink AnchorLink-white-45 MuiTypography-colorPrimary"
    type="button"
  >
    <span>
      BMI Group
    </span>
  </a>
</div>
`;

exports[`AnchorLink component renders with children component 1`] = `
<div>
  <a
    class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-root-73 Anchorlink MuiTypography-colorPrimary"
    type="button"
  >
    <span>
      <div>
        Test
      </div>
    </span>
  </a>
</div>
`;

exports[`AnchorLink component renders with className 1`] = `
<div>
  <a
    class="MuiTypography-root MuiLink-root MuiLink-underlineHover test-className AnchorLink-root-79 Anchorlink MuiTypography-colorPrimary"
    type="button"
  >
    <span>
      Test
    </span>
  </a>
</div>
`;

exports[`AnchorLink component renders with iconInverted 1`] = `
<div>
  <a
    class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-root-85 Anchorlink MuiTypography-colorPrimary"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="AnchorLink-icon-89 AnchorLink-icon--inverted-90"
      data-testid="internal"
      focusable="false"
    />
    <span>
      Test
    </span>
  </a>
</div>
`;

exports[`AnchorLink component renders with rest props 1`] = `
<div>
  <a
    class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-root-67 Anchorlink MuiTypography-colorPrimary"
    rel="noreferrer"
    target="_blank"
    type="button"
  >
    <span>
      Test
    </span>
  </a>
</div>
`;

exports[`AnchorLink component renders within a dark color pair context 1`] = `
<div>
  <a
    class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-root-49 Anchorlink AnchorLink-white-51 MuiTypography-colorPrimary"
    type="button"
  >
    <span>
      BMI Group
    </span>
  </a>
</div>
`;

exports[`AnchorLink component renders within a light color pair context 1`] = `
<div>
  <a
    class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-root-55 Anchorlink AnchorLink-white-57 MuiTypography-colorPrimary"
    type="button"
  >
    <span>
      BMI Group
    </span>
  </a>
</div>
`;
